@@ -1,7 +1,8 @@
 buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.7.4")
-        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.19.2')
+        classpath('com.bmuschko:gradle-docker-plugin:6.7.0')
+        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.2')
     }
     repositories {
         maven {
@@ -17,6 +18,7 @@ plugins {
 }
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.bmuschko.docker-spring-boot-application'
 
 group 'com.songyuankun'
 version '1.0-SNAPSHOT'
@@ -63,9 +65,25 @@ test {
     enabled false
 }
 
-apply plugin: 'com.palantir.docker'
+jar {
+    baseName = "spring-boot-gradle-for-docker"
+    version = 1.0
+}
+
 docker {
-    dockerfile file('Dockerfile') //DockerFile路径
-    name "${project.group}/${project.getProperties().get('docker.repo')}:${project.getProperties().get('docker.tag')}"
-    buildArgs(['JAR_FILE': "${jar.archiveName}"])
+    springBootApplication {
+        baseImage = 'openjdk:8-alpine'
+        ports = [8084, 8084]
+        jvmArgs = ['-Dspring.profiles.active=production', '-Xmx2048m']
+    }
+}
+
+dockerCreateDockerfile {
+    instruction 'RUN ls -la'
+    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
+}
+dockerCreateDockerfile.instructionsFromTemplate file('Dockerfile')
+
+docker {
+    url = 'tcp://192.168.31.88:2375'
 }
